<resources>
    <string name="app_name">Traka</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="location">Location</string>
    <string name="display">Display</string>
    <string name="best_regards">Best Regards \nAyokunle Paul.</string>
    <string name="start_location_update">Start Location Update</string>
    <string name="display_on_google_maps">Display on Map</string>
    <string name="name_of_place">Enter the name of place</string>
    <string name="go">Go</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">Or</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="drawer_opened">"Open navigation drawer"</string>
    <string name="drawer_closed">"Close navigation drawer"</string>
    <string name="phone_number">Phone Number</string>
</resources>
