<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:layout_above="@+id/password_text_input_layout"
        android:id="@+id/email_text_input_layout"
        android:theme="@style/EditTextTheme">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_marginBottom="0dp"
            android:id="@+id/username"
            android:lines="1"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:layout_centerInParent="true"
        android:id="@+id/password_text_input_layout"
        android:theme="@style/EditTextTheme"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_visibility_black_24dp"
        app:passwordToggleTint="@color/colorPrimary">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:lines="1"
            android:id="@+id/password"
            android:drawableStart="@drawable/ic_input_black_24dp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/password_text_input_layout"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or"
        android:id="@+id/no_account"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:layout_margin="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:padding="0dp"
            android:background="@null"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textAllCaps="false"
            android:id="@+id/sign_up"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/or"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:padding="0dp"
        android:background="@null"
        android:textAlignment="center"
        android:layout_gravity="start"
        android:textAllCaps="false"
        android:id="@+id/forgot_password"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/no_account"/>

</RelativeLayout>