<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_name_text_input_layout"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/first_name"
            android:inputType="textPersonName"
            android:hint="@string/first_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/last_name_text_input_layout"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/last_name"
            android:inputType="textPersonName"
            android:hint="@string/last_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_text_input_layout"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/email_sign_up"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_text_input_layout"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_visibility_off_black_24dp"
        app:passwordToggleTint="@color/colorPrimary">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/password_sign_up"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password_text_input_layout"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_visibility_off_black_24dp"
        app:passwordToggleTint="@color/colorPrimary">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/confirm_password_sign_up"
            android:inputType="textPassword"
            android:hint="@string/confirm_password" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:id="@+id/sign_up_button"/>

</LinearLayout>