<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="270dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/location"
            android:scaleType="fitXY"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/location"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:src="@drawable/location_icon"
                android:id="@+id/location_icon"
                android:contentDescription="@string/location"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/location_icon"
                android:layout_toStartOf="@+id/get_current_location"
                android:padding="5dp"
                android:lines="4"
                android:minLines="1"
                android:id="@+id/location_coordinates"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/location"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/get_current_location"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_margin="10dp"
                android:text="@string/start_location_update"
                android:textAllCaps="false"
                android:id="@+id/start_location_updates"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_margin="10dp"
                android:text="@string/display_on_google_maps"
                android:textAllCaps="false"
                android:id="@+id/see_on_map"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@android:color/holo_red_light"
            android:id="@+id/name_of_place_input_layout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_place"
                android:visibility="gone"
                android:id="@+id/name_of_place"
                android:textColorHint="@android:color/holo_red_light" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="50dp"
            android:layout_height="40dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="end"
            android:text="@string/go"
            android:textAllCaps="false"
            android:id="@+id/go"
            android:visibility="gone"
            android:clickable="false"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="5dp"
            android:text="@string/best_regards"
            android:padding="10dp"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textSize="15sp"/>

    </LinearLayout>

</ScrollView>